run a few experiments

--- a/procrustes_alignment.ipynb
+++ b/procrustes_alignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "common-spring",
+   "id": "relative-healing",
    "metadata": {},
    "source": [
     "## OpenEA datasets. We consider RotatE and TransE embedding approaches"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "elder-video",
+   "id": "permanent-junior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "outside-acrobat",
+   "id": "distributed-drama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "breathing-garbage",
+   "id": "still-sustainability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "trained-audience",
+   "id": "thrown-democracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "common-rental",
+   "id": "pressing-footwear",
    "metadata": {},
    "source": [
     "## Define functions to load embeddings"
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "trying-garden",
+   "id": "toxic-latex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "collected-steal",
+   "id": "studied-endorsement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "subsequent-quick",
+   "id": "crazy-christianity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,38 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "approved-journalist",
+   "execution_count": 33,
+   "id": "pointed-sacramento",
    "metadata": {},
    "outputs": [],
    "source": [
-    "alignment = build_alignment_dict(\"EN_FR_15K_V1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "close-religion",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_entities = get_test_entities(\"EN_FR_15K_V1\", 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "imposed-rouge",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "alignment = build_alignment_dict(\"EN_FR_15K_V1\")\n",
+    "test_entities = get_test_entities(\"EN_FR_15K_V1\", 1)\n",
     "emb1, emb2 = get_embeddings(\"EN_FR_15K_V1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "optimum-stanford",
+   "id": "overall-invasion",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "appropriate-drive",
+   "id": "wound-nutrition",
    "metadata": {},
    "outputs": [
     {
@@ -565,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "earned-disclosure",
+   "execution_count": 34,
+   "id": "solid-detail",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +559,7 @@
       "Now computing R...\n",
       "Scale S:  0.8341125927861606\n",
       "\n",
-      "Completed after 0.08717536926269531 seconds\n",
+      "Completed after 0.09527587890625 seconds\n",
       "Alignment loss:  3285.2662817510895\n"
      ]
     }
@@ -589,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "national-bride",
+   "execution_count": 35,
+   "id": "graduate-acoustic",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +581,7 @@
        "(1500, 50)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,8 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "universal-mambo",
+   "execution_count": 36,
+   "id": "deadly-accident",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +611,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1500/1500 [00:00<00:00, 109569.07it/s]"
+      "100%|██████████| 1500/1500 [00:00<00:00, 110461.69it/s]"
      ]
     },
     {
@@ -646,7 +628,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 1500/1500 [00:00<00:00, 103721.85it/s]"
+      "100%|██████████| 1500/1500 [00:00<00:00, 108969.38it/s]"
      ]
     },
     {
@@ -671,13 +653,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-indonesian",
+   "id": "seeing-gossip",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "black-surprise",
+   "id": "decent-trigger",
    "metadata": {},
    "source": [
     "## With RotatE embeddings"
@@ -685,8 +667,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "adopted-karen",
+   "execution_count": 44,
+   "id": "athletic-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,8 +677,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "adequate-eugene",
+   "execution_count": 45,
+   "id": "manufactured-smart",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +822,7 @@
        "[3 rows x 400 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "centered-bridge",
+   "execution_count": 46,
+   "id": "sudden-wrist",
    "metadata": {},
    "outputs": [
     {
@@ -861,22 +843,22 @@
      "text": [
       "\n",
       "Now computing R...\n",
-      "Scale S:  1.380785770988798\n",
+      "Scale S:  1.3987306919266569\n",
       "\n",
-      "Completed after 0.20208430290222168 seconds\n",
-      "Alignment loss:  5368.723264621252\n"
+      "Completed after 0.36179161071777344 seconds\n",
+      "Alignment loss:  15137.798050691987\n"
      ]
     }
    ],
    "source": [
     "scale_S, scale_T, mean_S, mean_T, S, T, S_test, T_test, R = get_source_and_target_matrices(alignment,\\\n",
-    "                                                emb1, emb2, given_test_set=test_entities, emb_dim=400, rescale=False, test_size=0.1)"
+    "                                                emb1, emb2, given_test_set=None, emb_dim=400, rescale=False, test_size=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "manual-benefit",
+   "execution_count": 47,
+   "id": "excellent-yield",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +876,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 43818.43it/s]\n"
+      "100%|██████████| 1500/1500 [00:00<00:00, 100705.19it/s]\n"
      ]
     },
     {
@@ -910,7 +892,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 46053.32it/s]"
+      "100%|██████████| 1500/1500 [00:00<00:00, 111542.73it/s]"
      ]
     },
     {
@@ -918,7 +900,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Hits@5: 0.00042857142857142855, Hits@10: 0.0008571428571428571, Hits@50: 0.004142857142857143, MRR: 0.000988131911788826\n"
+      "Hits@5: 0.003, Hits@10: 0.006333333333333333, Hits@50: 0.033, MRR: 0.005582873518672749\n"
      ]
     },
     {
@@ -936,14 +918,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "talented-convention",
+   "id": "equivalent-lawsuit",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "introductory-pontiac",
+   "id": "productive-iceland",
    "metadata": {},
    "source": [
     "## Another dataset: EN_FR_100K_V1"
@@ -951,8 +933,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "smooth-sacrifice",
+   "execution_count": 48,
+   "id": "eligible-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,8 +945,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "representative-customer",
+   "execution_count": 49,
+   "id": "sporting-front",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +957,7 @@
       "Now computing R...\n",
       "Scale S:  0.5238434249154881\n",
       "\n",
-      "Completed after 0.6418383121490479 seconds\n",
+      "Completed after 0.6284322738647461 seconds\n",
       "Alignment loss:  17580.037182179432\n"
      ]
     }
@@ -987,8 +969,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "previous-spanking",
+   "execution_count": null,
+   "id": "innocent-worse",
    "metadata": {},
    "outputs": [
     {
@@ -1006,38 +988,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:00<00:00, 42731.78it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fitting 2...\n",
-      "Predicting 2...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10000/10000 [00:00<00:00, 44983.38it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Hits@5: 0.0007, Hits@10: 0.0010999999999999998, Hits@50: 0.0056, Hits@1000: 0.10805000000000001, MRR: 0.0010776550452930855\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 10000/10000 [00:00<00:00, 45222.39it/s]"
      ]
     }
    ],
@@ -1048,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aerial-mozambique",
+   "id": "capable-norway",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1056,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepted-climate",
+   "id": "broken-error",
    "metadata": {},
    "outputs": [],
    "source": []
