run a few experiments.

--- a/procrustes_alignment.ipynb
+++ b/procrustes_alignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "relative-healing",
+   "id": "handled-engineer",
    "metadata": {},
    "source": [
     "## OpenEA datasets. We consider RotatE and TransE embedding approaches"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "permanent-junior",
+   "id": "subjective-block",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "distributed-drama",
+   "id": "capital-comment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "still-sustainability",
+   "id": "logical-account",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "thrown-democracy",
+   "id": "individual-cache",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-footwear",
+   "id": "pressed-connecticut",
    "metadata": {},
    "source": [
     "## Define functions to load embeddings"
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "toxic-latex",
+   "id": "ruled-crawford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "studied-endorsement",
+   "id": "formal-attention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "crazy-christianity",
+   "id": "sunset-cincinnati",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "pointed-sacramento",
+   "id": "minor-camcorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "overall-invasion",
+   "id": "distant-valuation",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "wound-nutrition",
+   "id": "enormous-yesterday",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "solid-detail",
+   "id": "adjacent-deployment",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "graduate-acoustic",
+   "id": "smart-fiction",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "deadly-accident",
+   "id": "chinese-brisbane",
    "metadata": {},
    "outputs": [
     {
@@ -653,13 +653,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-gossip",
+   "id": "damaged-dominican",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "decent-trigger",
+   "id": "cultural-politics",
    "metadata": {},
    "source": [
     "## With RotatE embeddings"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "athletic-petersburg",
+   "id": "primary-minister",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "manufactured-smart",
+   "id": "initial-jaguar",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "sudden-wrist",
+   "id": "damaged-maker",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "excellent-yield",
+   "id": "resident-keeping",
    "metadata": {},
    "outputs": [
     {
@@ -918,14 +918,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equivalent-lawsuit",
+   "id": "loving-basketball",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "productive-iceland",
+   "id": "elder-hunter",
    "metadata": {},
    "source": [
     "## Another dataset: EN_FR_100K_V1"
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "eligible-advance",
+   "id": "handmade-thinking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "sporting-front",
+   "id": "rapid-composer",
    "metadata": {},
    "outputs": [
     {
@@ -969,8 +969,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "innocent-worse",
+   "execution_count": 50,
+   "id": "matched-officer",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:00<00:00, 45222.39it/s]"
+      "100%|██████████| 10000/10000 [00:00<00:00, 45222.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fitting 2...\n",
+      "Predicting 2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [00:00<00:00, 46706.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hits@5: 0.0007, Hits@10: 0.0010999999999999998, Hits@50: 0.0056, Hits@1000: 0.10805000000000001, MRR: 0.0010776550452930855\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -999,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capable-norway",
+   "id": "satisfactory-fundamental",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1007,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broken-error",
+   "id": "liberal-moral",
    "metadata": {},
    "outputs": [],
    "source": []
